

HEAD
====
Fixes:
- defs: resolve warning for users of const_cast*() when using -Wextra
- format: error handling for HXformat2_aprintf
- option: do not omit dashes when passthru'ing unknown two-part long opts
- option: do not omit arg following unknown unknown two-part long opts in pthru
- option: do run callback on HXTYPE_BOOL
Enhancements:
- build: deactivate type-checking of the *_cast() macros for clang due to a
  compiler bug involving nested structs-in-typeofs
- io: add HX_mkdir2 which can take a mode argument
- string: add a HX_strndup function
- string: add a HX_strnlen function
- mc: use an implicit minimum allocated length


v3.11 (2011-07-25)
==================
Enhancements:
- A LD_PRELOAD-able library libHX_rtcheck.so that adds global state correctness
  checks, was added.
- add a HXQUOTE_BASE64 to HX_strquote
Changes:
- HX_strquote will return NULL for unknown types now instead of just
  returning the input pointer


v3.10.1 (2011-04-06)
====================
Fixes:
- defs: BUILD_BUG_ON_EXPR had erroneously returned 1


v3.10 (2011-04-05)
==================
Fixes:
- build: resolve autoconf-2.68 warnings
- format: do not split arguments in %(lower) and %(upper)
Changes:
- defs: add array type checking in ARRAY_SIZE
- opt: use non-zero sentinel marker
- string: make HX_getl more resilient against errors
Enhancements:
- defs: add BUILD_BUG_ON_EXPR
- format: provide a %(substr) function
- io: add HX_readlink (zero-terminating mc-output readlink)
- io: add HX_realpath (supports relative-path output)


v3.9.1 (2011-01-17)
===================
Fixes:
- libHX/io.h was not copied on `make install`, which has been fixed


v3.9 (2011-01-15)
=================
Fixes:
- Added missing __cplusplus guards to libHX/io.h
- Added missing includes to libHX/string.h
- Use __typeof__ in includes
Changes:
- For filesystem/filehandle-related functions, io.h should now be included
  in userspace programs instead of misc.h
- libHX.so is now built with a symvers map file