@@ -72,7 +72,9 @@ static void dump_argv(const char **v)
 static void t_pthru(void)
 {
 	const char *argv[] = {
-		"ARGV0", "--unknown-f=13.37", "--unknown-a", "foo", "bar", NULL
+		"ARGV0", "-Zomg", "-GZfoo", "bar",
+		"--unknown-f=13.37", "--unknown-a",
+		"foo", "bar", NULL
 	};
 	const char **argp = argv;
 	int argc = ARRAY_SIZE(argv) - 1;
