@@ -8,6 +8,7 @@ Fixes:
 - option: do not omit dashes when passthru'ing unknown two-part long opts
 - option: do not omit arg following unknown unknown two-part long opts in pthru
 - option: do run callback on HXTYPE_BOOL
+- option: correct passthrough of squashed unknown short options
 Enhancements:
 - build: deactivate type-checking of the *_cast() macros for clang due to a
   compiler bug involving nested structs-in-typeofs
